# pyssaBSS

./: .buildinfo  .gitignore  .readthedocs.yaml  CMakeLists.txt  README.md  api.html  examples.html  genindex.html  getting_started.html  index.html  objects.inv  py-modindex.html  pyproject.toml  search.html  searchindex.js
.github/workflows/: docs.yml  publish.yml
_modules/: index.html
_modules/pyssaBSS/: jdc.html  kernels.html  polygon.html  scatter.html  spatial.html  spssa.html  ssa.html  types.html  utils.html
_sources/: api.rst.txt  examples.rst.txt  getting_started.rst.txt
docs/: conf.py  index.rst
examples/: basic_usage.py
src/pyssaBSS/: __init__.py  jdc.py  kernels.py  polygon.py  scatter.py  spatial.py  spssa.py  ssa.py  types.py  utils.py
src/pyssaBSS/joint_diag/: __init__.py  cJADE.cpp  wrapper.cpp
